--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
           git config --global user.email 'aussieaddons@aussieaddons.com'
           git config --global user.name 'Aussie Add-ons Bot'
           git config credential.helper "store --file=.git/credentials"
-          echo "https://$${{ secrets.GITHUB_TOKEN }}:@github.com" > .git/credentials
+          echo "https://$${{ secrets.PAT }}:@github.com" > .git/credentials
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
