--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           repository: aussieaddons/repo-devel
           path: .deploy-devel
-          persist-credentials: false
+          token: ${{ secrets.PAT }}
 
       # Runs a single command using the runners shell
       - name: Set git credentials
@@ -39,7 +39,7 @@ jobs:
           git config --global user.email 'aussieaddons@aussieaddons.com'
           git config --global user.name 'Aussie Add-ons Bot'
           git config credential.helper "store --file=.git/credentials"
-          echo "https://$${{ secrets.PAT }}:@github.com" > .git/credentials
+          #echo "https://${{ secrets.PAT }}:@github.com" > .git/credentials
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
